<resources>
    <string name="app_name">Buygosell</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
 <string name="demo">{fa_user}  NewTitleForCamera</string>
    <string name="nav_gallery">Gallery</string>
    <string name="shopping_category">Select Category four</string>
    <string name="shopping_search">Search a item..</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="email">contect@buygosell.com</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="Buy">Buy</string>
    <string name="Go">Go</string>
    <string name="Sell">Sell</string>
    <string name="login_btn">LOGIN</string>
    <string name="not_a_account">NOT A ACCOUNT?</string>
    <string name="signup_txt">SIGN UP</string>
    <string name="forgrt_pass">Forget Password</string>
    <string name="countect_number_mob">(0432) 215 91 89</string>
    <string name="countect_number_mob_txt">Mobile</string>
    <string name="countect_number_work_mob">(0432 215 91 89)</string>
    <string name="countect_number_work_txt">work</string>
    <string name="personol_email">bilgi@buygosell.com</string>
    <string name="personol_email_txt">persnol</string>
    <string name="personol_work_txt">Work</string>
    <string name="address_home">İpekyolu Üzeri Havalanı Kavşağı No:6 Carwan Motors</string>
    <string name="add_home_txt">Home</string>
    <string name="address_title">Address Title</string>
    <string name="address">Address</string>
    <string name="post_code_txt">Post Code</string>
    <string name="telephone_txt">Telephone</string>
    <string name="add_btn">+ Add...</string>
    <string name="add_Pictures_txt">Add Pictures</string>
    <string name="dark_dropdown_tv">hello world</string>
    <string name="close_btn">Close</string>
    <string name="select_btn">Select</string>
    <string name="forget_txt">Forget Password</string>
    <string name="submit_btn">Submit...</string>
    <string name="product_title_txt">Product title</string>
    <string name="product_catagory_name_txt">Electroinc / Laptop</string>
    <string name="price_name_txt">Price</string>
    <string name="price_txt">$ 1000 USD</string>
    <string name="buy_date_name_txt">Buy Date</string>
    <string name="buy_date_txt">27/03/2018</string>
    <string name="seller_name_txt">Seller</string>
    <string name="seller_txt">Bahadir Calebi</string>
    <string name="from_country_name_txt">Form Country</string>
    <string name="from_country_txt">Canada</string>
    <string name="to_country_name_txt">To Country</string>
    <string name="to_country_txt">Tukey</string>
    <string name="note_name_txt">Notes</string>
    <string name="note_txt">Lorem Ipsum is simply dummy text</string>
    <string name="buy_now_btn">BUY NOW</string>
    <string name="add_to_cart_btn">ADD TO CART</string>
    <string name="i_want_to_buy_btn">I WANT BUY</string>
    <string name="i_want_to_sell_btn">I WANT SELL</string>
    <string name="total_price_txt">TOTAL PRICE : $ 0 USD</string>
    <string name="clear_basket_btn">CLEAR BASKET</string>
    <string name="countinue_btn">CONTINUE >></string>
    <string name="want_to_buy_txt">WHAT DO YOU WANT TO BUY ?</string>
    <string name="fast_sarcha_btn">FAST SEARCH...</string>
    <string name="select_country_spinner_txt">SELECT COUNTRY</string>
    <string name="product_txt">PRODUCT</string>
    <string name="search_txt"> SEARCH...</string>
    <string name="profile_slider_title_txt">Bahadir CELEBI</string>
    <string name="profile_slider_disc_txt">the five fingers of the</string>
    <string name="user_name_txt">Rebecca Rain</string>
    <string name="name_title_txt">Name</string>
    <string name="email_title_txt">Email</string>
    <string name="phone_title_txt">Phone</string>
    <string name="address_title_txt">Address</string>
    <string name="city_title_txt">City</string>
    <string name="state_title_txt">State</string>
    <string name="zip_code_title_txt">Zip Code</string>
    <string name="password_title_txt">Password</string>
    <string name="country_txt">Country</string>
    <string name="product_name_txt">Dell Laptop</string>
    <string name="new_price_txt">$ 1,000 USD</string>
    <string name="old_price_txt">$ 1,200 USD</string>
    <string name="disc_product_txt">Lorem Ipsum is simply dummy text</string>
    <string name="date_product_txt">22 fab 2017</string>
    <string name="navi_top_filter_txt">Filter\'s</string>
    <string name="navi_price_txt">$Price</string>
    <string name="product_disc_txt">Product description</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="quila_name">Quila</string>
    <string name="quila_tagline">I love bones and slippers</string>
    <string name="quila_name2">Quila!</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>
    <string name="fa_glass">&#xf000;</string>
    <string name="fa_music">&#xf001;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="fa_envelope_o">&#xf003;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_star_o">&#xf006;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_film">&#xf008;</string>
    <string name="fa_th_large">&#xf009;</string>
    <string name="fa_th">&#xf00a;</string>
    <string name="fa_th_list">&#xf00b;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_times">&#xf00d;</string>
    <string name="fa_search_plus">&#xf00e;</string>
    <string name="fa_search_minus">&#xf010;</string>
    <string name="fa_power_off">&#xf011;</string>
    <string name="fa_signal">&#xf012;</string>
    <string name="fa_cog">&#xf013;</string>
    <string name="fa_trash_o">&#xf014;</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_file_o">&#xf016;</string>
    <string name="fa_clock_o">&#xf017;</string>
    <string name="fa_road">&#xf018;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_arrow_circle_o_down">&#xf01a;</string>
    <string name="fa_arrow_circle_o_up">&#xf01b;</string>
    <string name="fa_inbox">&#xf01c;</string>
    <string name="fa_play_circle_o">&#xf01d;</string>
    <string name="fa_repeat">&#xf01e;</string>
    <string name="fa_refresh">&#xf021;</string>
    <string name="fa_list_alt">&#xf022;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_flag">&#xf024;</string>
    <string name="fa_headphones">&#xf025;</string>
    <string name="fa_volume_off">&#xf026;</string>
    <string name="fa_volume_down">&#xf027;</string>
    <string name="fa_volume_up">&#xf028;</string>
    <string name="fa_qrcode">&#xf029;</string>
    <string name="fa_barcode">&#xf02a;</string>
    <string name="fa_tag">&#xf02b;</string>
    <string name="fa_tags">&#xf02c;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_bookmark">&#xf02e;</string>
    <string name="fa_print">&#xf02f;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_font">&#xf031;</string>
    <string name="fa_bold">&#xf032;</string>
    <string name="fa_italic">&#xf033;</string>
    <string name="fa_text_height">&#xf034;</string>
    <string name="fa_text_width">&#xf035;</string>
    <string name="fa_align_left">&#xf036;</string>
    <string name="fa_align_center">&#xf037;</string>
    <string name="fa_align_right">&#xf038;</string>
    <string name="fa_align_justify">&#xf039;</string>
    <string name="fa_list">&#xf03a;</string>
    <string name="fa_outdent">&#xf03b;</string>
    <string name="fa_indent">&#xf03c;</string>
    <string name="fa_video_camera">&#xf03d;</string>
    <string name="fa_picture_o">&#xf03e;</string>
    <string name="fa_pencil">&#xf040;</string>
    <string name="fa_map_marker">&#xf041;</string>
    <string name="fa_adjust">&#xf042;</string>
    <string name="fa_tint">&#xf043;</string>
    <string name="fa_pencil_square_o">&#xf044;</string>
    <string name="fa_share_square_o">&#xf045;</string>
    <string name="fa_check_square_o">&#xf046;</string>
    <string name="fa_arrows">&#xf047;</string>
    <string name="fa_step_backward">&#xf048;</string>
    <string name="fa_fast_backward">&#xf049;</string>
    <string name="fa_backward">&#xf04a;</string>
    <string name="fa_play">&#xf04b;</string>
    <string name="fa_pause">&#xf04c;</string>
    <string name="fa_stop">&#xf04d;</string>
    <string name="fa_forward">&#xf04e;</string>
    <string name="fa_fast_forward">&#xf050;</string>
    <string name="fa_step_forward">&#xf051;</string>
    <string name="fa_eject">&#xf052;</string>
    <string name="fa_chevron_left">&#xf053;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_plus_circle">&#xf055;</string>
    <string name="fa_minus_circle">&#xf056;</string>
    <string name="fa_times_circle">&#xf057;</string>
    <string name="fa_check_circle">&#xf058;</string>
    <string name="fa_question_circle">&#xf059;</string>
    <string name="fa_info_circle">&#xf05a;</string>
    <string name="fa_crosshairs">&#xf05b;</string>
    <string name="fa_times_circle_o">&#xf05c;</string>
    <string name="fa_check_circle_o">&#xf05d;</string>
</resources>