<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottomborder"
        android:orientation="horizontal"
        android:weightSum="12">
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3">
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_post_id"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="#fff"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="3dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/my_order_image"
                    android:scaleType="fitXY"
                    android:src="@drawable/dummypic" />
            </android.support.v7.widget.CardView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="7">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingTop="3dp"
                    android:text="@string/product_name_txt"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/discription_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:text="@string/disc_product_txt"
                    android:textColor="#000000"
                    android:textSize="12dp" />


                <TextView
                    android:id="@+id/price_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="8dp"

                    android:text="@string/new_price_txt"
                    android:textColor="#000000"
                    android:textSize="15dp" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:paddingTop="10dp"
                    android:text="@string/date_product_txt"
                    android:textColor="#777777"
                    android:textSize="13dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>